read messages, get chats count with unread messages, message type enum
